Modernize generated attribute support
Replace unsupported reflective and internal-JDK techniques with Java 21-compatible source and bytecode generation while preserving public attribute APIs.

Signed-off-by: Shuaib Rao <99695611+shuaibrao@users.noreply.github.com>